--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@ngx-formly/bootstrap": "^4.8.2",
     "@ngx-formly/core": "^4.8.2",
+    "angular-notifier": "^4.1.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
