--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "moment": "^2.22.2",
+    "ngx-quill": "^4.0.0",
+    "quill": "^1.3.6",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
